--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="src/styles">
+    <link rel="stylesheet" href="src/styles/index.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Critical Mass | A2Z Take-home</title>
   </head>
