--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         </ul>
       </nav>
     </header>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/services/main.ts"></script>
   </body>
 </html>
