--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="time-container">
+        <div class="clock"></div>
+      </section>
+    </main>
     <script type="module" src="/src/services/main.ts"></script>
   </body>
 </html>
